Fix whitespace of span value hints and bump module version to 3.1.0

--- a/view/adminhtml/web/css/configscopehints.less
+++ b/view/adminhtml/web/css/configscopehints.less
@@ -40,6 +40,11 @@
             display: block;
         }
 
+        span.override-value-hint-label {
+            display: block;
+            margin-bottom: 1rem;
+        }
+
         //move native accordion left whitespace from margin to padding
         margin-left: 0;
         padding-left: 40px;
